--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { "name": "express-final-text-response-pmb",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Respond to an express-style web request with a text and finish it.",
   "keywords": [
     "express"
@@ -30,15 +30,16 @@
     "error-details-without-log-spam-pmb": "^1.0.0",
     "getown": "^1.0.0",
     "is-error": "^2.2.2",
+    "is-fn": "^2.0.0",
     "is-string": "^1.0.7",
-    "safe-sortedjson": "^1.0.6"
+    "safe-sortedjson": "^1.0.7"
   },
   "devDependencies": {
-    "eslint-config-nodejs-pmb": "^0.3.4",
+    "eslint-config-nodejs-pmb": "^0.3.5",
     "eslint-plugin-json-light-pmb": "^1.0.7",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^15.2.4",
     "eslint-pretty-pmb": "^1.0.5",
-    "nodemjs": "^0.1.11"
+    "nodemjs": "^0.1.12"
   },
   "peerDependencies": {
   },
